deploy/10-service-elastic.yml
apiVersion: v1
kind: Service
metadata:
  name: es-service
  namespace: elk
spec:
  selector:
    app: elasticsearch
  clusterIP: None
