deploy/12-service-kibana.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana-service
  namespace: elk
spec:
  type: NodePort
  selector:
    app: kibana
  ports:
  - port: 5601
    targetPort: 5601
    nodePort: 30001
